--- a/css/queries.css
+++ b/css/queries.css
@@ -5,17 +5,25 @@
 
 /* Desktop */
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1200px) {
     /* Unites */
     .space {
         margin-left: 97px;
     }
+    /* .space-2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    } */
     .dis {
         display: flex;
         flex-direction: column;
     }
     .submit {
         margin-bottom: 0 !important;
+    }
+    .corainate {
+        width: 70%;
     }
     /* NAV */
     #top-nav .how-to-use span {
@@ -80,6 +88,78 @@
         margin-bottom: 45px !important;
     }
     #questions-section {
-        margin-top: 90px;
+        margin-top: 75px;
+    }
+    #questions-section h3 {
+        font-size: 20px;
+    }
+    #questions-section .question p {
+        font-size: 18;
+    }
+    /* Result page */
+    #download-result {
+        padding-top: 120px;
+        padding-right: 87px;
+    }
+    #download-result p {
+        font-size: 16px;
+    }
+    .name-title h2 {
+        font-size: 33px;
+    }
+    .name-title span {
+        font-size: 16px
+    }
+    #download-result h3 {
+        margin-bottom: 12px;
+        font-size: 33px;
+        font-weight: bold;
+    }
+    #recommendations-units-titles h3 {
+        font-size: 33px;
+        line-height: 1.4;
+        margin-bottom: 0;
+    }
+    #recommendations-units-titles span {
+        font-size: 24px;
+    }
+    #recommendations-units-titles p {
+        font-size: 18px;
+        line-height: 1.4;
+        margin-bottom: 20px;
+    }
+    #question-comments .tab-pane .errors {
+        font-size: 18px;
+        /* margin-bottom: 38px !important; */
+        line-height: 67px;
+    }
+    .question-title {
+        font-size: 22px;
+        margin-bottom: 0;
+    }
+    .question-rate {
+        font-size: 18px;
+    }
+    #question-comments .question-comment {
+        padding: 40px;
+    }
+    #question-comments .question-comment p {
+        font-size: 16px;
+        line-height: 1.4;
+    }
+    #my-results-section #all-results {
+        justify-content: flex-start;
+    }
+    #final-result h3 {
+        font-size: 56px;
+        font-weight: 100;
+    }
+    .single-result {
+        margin-left: 20px;
+        width: 159px;
+        height: 189px;
+    }
+    .single-result {
+        margin-bottom: 20px;
     }
 }
