--- a/css/style.css
+++ b/css/style.css
@@ -343,8 +343,6 @@ header hr {
 /* cover-image-section */
 
 #cover-image-section {
-    width: 90%;
-    margin: auto;
     margin-bottom: 46px !important;
 }
 
@@ -528,6 +526,7 @@ header hr {
 #five-minuts span {
     font-size: 14px;
     font-weight: 400;
+    color: #fff;
 }
 
 #exam-tips {
@@ -653,6 +652,10 @@ input:focus {
 
 
 /* blur */
+
+.relative-blur {
+    position: relative;
+}
 
 .has-blur {
     z-index: 9;
@@ -820,4 +823,226 @@ input:focus {
     position: relative;
     background-color: #2AB767 !important;
     border-color: #2AB767 !important;
+}
+
+#download-result .relative-blur {
+    width: 120px;
+}
+
+
+/* reslt-section */
+
+#top-info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+
+#download-result {
+    background-image: url('../img/bg-result.png');
+    height: 334px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 26px;
+    color: #FFFFFF !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 66px;
+}
+
+#download-result h3 {
+    margin-bottom: 34px;
+    font-size: 29px;
+    font-weight: bold;
+}
+
+#download-result p {
+    margin-bottom: 23px;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+#final-result {
+    padding: 31px;
+    margin-top: 78px;
+    background-color: #FFFFFF;
+    border-radius: 26px;
+    margin-bottom: 42px;
+}
+
+#final-result h3 {
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#final-result img {
+    width: 309px;
+    height: 309px;
+}
+
+#grade {
+    font-size: 48px;
+    font-weight: 400;
+}
+
+#recommendations-units-titles h3 {
+    font-size: 29px;
+    font-weight: bold;
+    color: #0A293E;
+    line-height: 62px;
+}
+
+#recommendations-units-titles span {
+    color: #888888;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 62px;
+}
+
+#recommendations-units-titles p {
+    color: #888888;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 62px;
+}
+
+#question-comments {
+    margin-bottom: 100px;
+}
+
+#question-comments .tab-pane .errors {
+    color: #F12B6E;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 62px;
+}
+
+.question-title {
+    color: #0A293E;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 62px;
+}
+
+.question-rate {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 62px;
+}
+
+#question-comments .question-comment {
+    background-color: #F2F2F2;
+    border-radius: 26px;
+    padding: 30px;
+}
+
+#question-comments .question-comment p {
+    font-size: 12px;
+    font-weight: 400;
+    color: #0A293E;
+    line-height: 37px;
+}
+
+
+/* nav nav-tabs */
+
+.nav.nav-tabs {
+    display: flex;
+    flex-wrap: wrap;
+    border-bottom: 0;
+}
+
+.nav.nav-tabs li a {
+    height: 76px;
+    width: 76px;
+    background: #FFFFFF;
+    color: #0A293E;
+    border-radius: 12px;
+    margin-left: 14px;
+    margin-bottom: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+.nav.nav-tabs li a.active {
+    color: #FFFFFF !important;
+    background: #F18C2B;
+}
+
+#user-img-result {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+#user-img-result img {
+    width: 100%;
+    height: 100%;
+}
+
+.name-title span {
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.name-title h2 {
+    font-size: 29px;
+    font-weight: bold;
+}
+
+
+/* my-results-section */
+
+#my-results-section #all-results {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0;
+}
+
+#my-results-section #all-results h3 {
+    font-size: 18px;
+    font-weight: 500;
+    color: #0A293E;
+    width: 100%;
+    margin-bottom: 19px;
+}
+
+.single-result {
+    margin-bottom: 20px;
+}
+
+.single-result {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+    height: 189px;
+    background-color: #FFFFFF;
+    border-radius: 21px;
+}
+
+.single-result img {
+    width: 46.77px;
+    height: 59.24px;
+    margin-bottom: 14px;
+}
+
+.single-result span {
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.single-result span.total-grade {
+    color: #F18C2B;
+    font-size: 14px;
+    font-weight: 500;
 }
