--- a/css/style.css
+++ b/css/style.css
@@ -1094,3 +1094,27 @@ input:focus {
     color: #F18C2B;
     font-size: 12px;
 }
+
+
+/* body {
+    margin: 2rem;
+} */
+
+
+/* POP UP */
+
+.modal-body {
+    position: relative;
+    padding: 0px;
+}
+
+.close {
+    position: absolute;
+    right: -30px;
+    top: 0;
+    z-index: 999;
+    font-size: 2rem;
+    font-weight: normal;
+    color: #fff;
+    opacity: 1;
+}
